--- a/_config.yml
+++ b/_config.yml
@@ -16,6 +16,7 @@ minimal: false             # use a dark header
 # Menu
 
 navigation:                # accepts {file, title, url, icon, sidebaricon}
+  - {file: "index.html", title: "About Me"}
   - {file: "pubs.html", title: "Publications"}
 
 external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
