--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: "Sukriti Gupta"
 author: "Sukriti Gupta"
-description: "Sukriti Gupta, M.A." #color: #f45;\">&lt;3</b>"
+description: "Sukriti Gupta, M.A.; University of California, Los Angeles" #color: #f45;\">&lt;3</b>"
 permalink: /:title/
 lang: "en"
 excerpt_separator: "\n\n\n"
