--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: "Sukriti Gupta"
 author: "Sukriti Gupta"
 description: "Sukriti Gupta, M.A.; University of California, Los Angeles" #color: #f45;\">&lt;3</b>"
-permalink: /:title/
+#permalink: /:title/
 lang: "en"
 excerpt_separator: "\n\n\n"
 date_format: "%B %d, %Y"
